Fixed alignment in coverage page.

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ html {
   width: 10%;
   padding-right: 2%;
   margin-left: 0;
-  margin-right: -12%;
+  margin-right: -14%;
 }
 
 li.group.covered {
